--- a/Phi-Box/MainWindow.xaml
+++ b/Phi-Box/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Phi_Box"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        ResizeMode="CanMinimize"
+        Title="MainWindow" Height="720" Width="1080">
     <Grid>
         <Frame x:Name="frame" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Navigated="frame_Navigated"/>
 
