--- a/Client/Phi-Box/GroupView.xaml
+++ b/Client/Phi-Box/GroupView.xaml
@@ -11,7 +11,7 @@
     <Grid  Height="720" Width="1080" Background="#FFCECECE">
         <Image x:Name="image1" HorizontalAlignment="Center" Height="78" VerticalAlignment="Top" Width="270" Source="images/phibbox_red.png"/>
         <Grid HorizontalAlignment="Left" Height="573" Margin="0,83,0,0" VerticalAlignment="Top" Width="738" Background="White">
-            <ScrollViewer HorizontalAlignment="Left" Height="451" VerticalAlignment="Top" Width="738" HorizontalScrollBarVisibility="Auto">
+            <ScrollViewer HorizontalAlignment="Left" Height="456" VerticalAlignment="Top" Width="738" HorizontalScrollBarVisibility="Auto">
                 <StackPanel x:Name="files_list" Orientation="Vertical" />
             </ScrollViewer>
             <Grid HorizontalAlignment="Left" Height="117" Margin="0,456,0,0" VerticalAlignment="Top" Width="738" Background="WhiteSmoke">
@@ -20,12 +20,23 @@
 
         </Grid>
         <Grid HorizontalAlignment="Left" Height="573" Margin="761,83,0,0" VerticalAlignment="Top" Width="319" Background="White">
-            <Grid HorizontalAlignment="Left" Height="70" VerticalAlignment="Top" Width="319" Background="WhiteSmoke">
-                <Label x:Name="label" Content="Users" HorizontalAlignment="Center" VerticalAlignment="Center" Height="70" Width="319" FontSize="36" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Grid HorizontalAlignment="Left" Height="38" VerticalAlignment="Top" Width="319" Background="WhiteSmoke">
+                <Label x:Name="label" Content="Users" HorizontalAlignment="Center" VerticalAlignment="Center" Height="70" Width="319" FontSize="30" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
             </Grid>
-            <ScrollViewer HorizontalAlignment="Left" Height="503" Margin="0,70,0,0" VerticalAlignment="Top" Width="319">
-                <StackPanel Height="504" Width="300" x:Name="users_list" Orientation="Vertical" />
+            <ScrollViewer HorizontalAlignment="Left" Height="233" Margin="0,38,0,0" VerticalAlignment="Top" Width="309">
+                <StackPanel Width="286" x:Name="users_list" Orientation="Vertical" />
             </ScrollViewer>
+            <Grid HorizontalAlignment="Left" Height="38" VerticalAlignment="Top" Width="319" Background="WhiteSmoke" Margin="0,271,0,0">
+                <Label x:Name="label2" Content="Pending" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Width="319" FontSize="25" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,-7,0,0"/>
+            </Grid>
+            <ScrollViewer HorizontalAlignment="Left" Height="162" Margin="0,309,0,0" VerticalAlignment="Top" Width="309">
+                <StackPanel Width="288" x:Name="pending_list" Orientation="Vertical" />
+            </ScrollViewer>
+            <Grid HorizontalAlignment="Left" Height="97" Margin="0,476,0,0" VerticalAlignment="Top" Width="319" Background="WhiteSmoke">
+                <Label x:Name="label3" Content="Add Member:" HorizontalAlignment="Left" VerticalAlignment="Top" Height="34" Width="196" FontSize="24" FontWeight="Bold" Padding="25,0,0,0" Margin="0,10,0,0" />
+                <TextBox x:Name="AddMember" HorizontalAlignment="Left" Height="41" Margin="25,49,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="264" FontSize="22"/>
+
+            </Grid>
         </Grid>
     </Grid>
 </Page>
