--- a/Client/Phi-Box/MainWindow.xaml
+++ b/Client/Phi-Box/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:Phi_Box"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
+        Closing="Window_Closing"
         Title="Phi-Box" Height="720" Width="1080">
     <Grid>
         <Frame x:Name="frame" Content="" NavigationUIVisibility="Hidden" HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Navigated="frame_Navigated"/>
