Added a start of file transfert.

--- a/Client/Phi-Box/Login.xaml
+++ b/Client/Phi-Box/Login.xaml
@@ -44,6 +44,7 @@
             </Button>
             <Button Content="Login" Height="23" HorizontalAlignment="Center" Margin="0,253,0,0" Name="Submit" VerticalAlignment="Top" Width="70" Click="Submit_Click" />
             <Image x:Name="image" Margin="42,0,38,238" HorizontalAlignment="Center" Source="images/phibbox_white.png"/>
+            <Button Content="Transfert file test" Height="23" HorizontalAlignment="Center" Margin="272,253,38,0" x:Name="Submit_Copy" VerticalAlignment="Top" Width="70" Click="Submit_Click_Transfert_Test" />
         </Grid>        
     </Grid>
 </Page>
